fix: alterado border color do checked em dark mode

--- a/assets/css/todolist.css
+++ b/assets/css/todolist.css
@@ -289,6 +289,10 @@ html .clear-completed:active {
   top: 0.75rem;
 }
 
+.dark-mode .round label {
+	border: 1px solid hsl(233, 14%, 35%);
+}
+
 .form-input .round input[type=checkbox]:not(:checked) + label:hover:after {
 	position: absolute;
 	top: -1px; bottom: -1px;
